use develop client core

--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,14 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#release/2.7",
-        "superdesk-planning": "github:superdesk/superdesk-planning#release/2.7"
+        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
+        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./",
         "start": "npx grunt server"
     },
     "devDependencies": {
-        "@superdesk/build-tools": "^1.0.18"
+        "@superdesk/build-tools": "^1.0.19"
     }
 }
