Update manage.py to use new click commands
SDESK-7284

--- a/server/requirements.in
+++ b/server/requirements.in
@@ -1,5 +1,5 @@
 honcho
 gunicorn
 
-git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
-git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@async
+superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@async
