--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,7 +18,7 @@ babel==2.16.0
     # via flask-babel
 bcrypt==4.1.3
     # via superdesk-core
-billiard==4.2.0
+billiard==4.2.1
     # via celery
 blinker==1.8.2
     # via
@@ -26,9 +26,9 @@ blinker==1.8.2
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.35.14
+boto3==1.35.30
     # via superdesk-core
-botocore==1.35.14
+botocore==1.35.30
     # via
     #   boto3
     #   s3transfer
@@ -126,7 +126,7 @@ httplib2==0.22.0
     # via oauth2client
 icalendar==5.0.13
     # via superdesk-planning
-idna==3.8
+idna==3.10
     # via requests
 itsdangerous==1.1.0
     # via
@@ -146,7 +146,7 @@ jwcrypto==1.5.6
     # via
     #   flask-oidc-ex
     #   python-jwt
-kombu==5.3.7
+kombu==5.4.2
     # via
     #   celery
     #   superdesk-core
@@ -178,15 +178,15 @@ pillow==10.4.0
     # via
     #   reportlab
     #   superdesk-core
-prompt-toolkit==3.0.47
+prompt-toolkit==3.0.48
     # via click-repl
-pyasn1==0.6.0
+pyasn1==0.6.1
     # via
     #   ldap3
     #   oauth2client
     #   pyasn1-modules
     #   rsa
-pyasn1-modules==0.4.0
+pyasn1-modules==0.4.1
     # via oauth2client
 pycparser==2.22
     # via cffi
@@ -215,7 +215,7 @@ python-magic==0.4.27
     # via superdesk-core
 python-twitter==3.5
     # via superdesk-core
-pytz==2024.1
+pytz==2024.2
     # via
     #   croniter
     #   eve-elastic
@@ -233,7 +233,7 @@ redis==5.0.8
     #   superdesk-core
 regex==2024.7.24
     # via superdesk-core
-reportlab==4.2.2
+reportlab==4.2.4
     # via superdesk-core
 requests==2.32.3
     # via
@@ -255,9 +255,9 @@ six==1.16.0
     #   flask-oidc-ex
     #   oauth2client
     #   python-dateutil
-superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@develop
+superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@v2.8.0
     # via -r requirements.in
-superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
+superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@v2.8.0
     # via -r requirements.in
 types-python-dateutil==2.9.0.20240906
     # via arrow
@@ -265,8 +265,10 @@ typing-extensions==4.12.2
     # via
     #   jwcrypto
     #   superdesk-core
-tzdata==2024.1
-    # via celery
+tzdata==2024.2
+    # via
+    #   celery
+    #   kombu
 tzlocal==2.1
     # via superdesk-core
 unidecode==1.3.8
