run dependabot on release/2.8

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,14 @@ updates:
     directory: "server" # Location of package manifests
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "npm"
+    target_branch: release/2.8
+    directory: "client"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pip"
+    target_branch: release/2.8
+    directory: "server"
+    schedule:
+      interval: "daily"
