update requirements/package-lock and enable planning

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop"
+        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
+        "superdesk-planning": "github:superdesk/superdesk-planning#async"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./",
