--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "license": "AGPL-3.0",
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#develop",
-        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+        "superdesk-planning": "github:tomaskikutis/superdesk-planning#2257ce95fb6f95a0be6e6c5161296c0323a6f24e"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./",
