--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -257,7 +257,7 @@ six==1.16.0
     #   python-dateutil
 superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@develop
     # via -r requirements.in
-superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
+superdesk-planning @ git+https://github.com/tomaskikutis/superdesk-planning.git@2257ce95fb6f95a0be6e6c5161296c0323a6f24e
     # via -r requirements.in
 types-python-dateutil==2.9.0.20240906
     # via arrow
