--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,7 @@
 name: "Lint"
 
-on: [push, pull_request]
+on:
+  workflow_call:
 
 defaults:
   run:
@@ -13,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
-    - run: pip install black
+    - run: pip install "black>=24,<25"
     - run: black --diff .
 
   flake8:
@@ -27,7 +28,9 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-    - run: pip install mypy
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+    - run: pip install -r dev-requirements.txt
     - run: mypy .
