allow using specific python version

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -2,6 +2,12 @@ name: "Server"
 
 on:
   workflow_call:
+    inputs:
+      python-version:
+        description: "Python version"
+        required: false
+        default: "3.10"
+        type: string
 
 defaults:
   run:
@@ -9,10 +15,6 @@ defaults:
 
 jobs:
   install:
-    strategy:
-      matrix:
-        python-version: ['3.8', '3.10', '3.12']
-
     runs-on: ubuntu-latest
 
     services:
@@ -38,7 +40,7 @@ jobs:
 
     - uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ inputs.python-version }}
 
     - run: |
         sudo apt-get update
@@ -57,7 +59,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: ${{ inputs.python-version }}
         cache: 'pip'
     - run: pip install -r dev-requirements.txt
     - run: black --check .
@@ -68,7 +70,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: ${{ inputs.python-version }}
     - run: pip install flake8
     - run: flake8
 
@@ -78,7 +80,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: ${{ inputs.python-version }}
         cache: 'pip'
     - run: pip install -r dev-requirements.txt
     - run: mypy .
