--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,12 @@ on: [push, pull_request]
 
 jobs:
   server:
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.10', '3.12']
     uses: ./.github/workflows/server.yml
+    with: 
+        python-version: ${{ matrix.python-version }}
 
   client:
     uses: ./.github/workflows/client.yml
