--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -2,13 +2,15 @@ name: "Client"
 
 on:
   workflow_call:
+    inputs:
+      node-version:
+        description: "Node version"
+        required: false
+        default: "14"
+        type: string
 
 jobs:
   install:
-    strategy:
-      matrix:
-        node-version: ['14']
-
     runs-on: ubuntu-latest
 
     defaults:
@@ -20,7 +22,7 @@ jobs:
 
     - uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ inputs.node-version }}
         cache: npm
         cache-dependency-path: client/package-lock.json
 
