--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -48,7 +48,7 @@ jobs:
 
     - run: |
         python -m pip install -U pip wheel setuptools
-        python -m pip install -r dev-requirements.txt
+        python -m pip install -Ur dev-requirements.txt
 
     - run: |
         honcho run python manage.py app:initialize_data
@@ -61,7 +61,7 @@ jobs:
       with:
         python-version: ${{ inputs.python-version }}
         cache: 'pip'
-    - run: pip install -r dev-requirements.txt
+    - run: pip install -Ur dev-requirements.txt
     - run: black --check .
 
   flake8:
@@ -71,7 +71,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
-    - run: pip install flake8
+    - run: pip install -Ur dev-requirements.txt
     - run: flake8
 
   mypy:
@@ -82,5 +82,5 @@ jobs:
       with:
         python-version: ${{ inputs.python-version }}
         cache: 'pip'
-    - run: pip install -r dev-requirements.txt
+    - run: pip install -Ur dev-requirements.txt
     - run: mypy .
