--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,66 +1,18 @@
-name: "Test"
+name: "CI"
 
 on: [push, pull_request]
 
 jobs:
-
   server:
-
     strategy:
       matrix:
         python-version: ['3.8', '3.10', '3.12']
-
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: server
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - uses: actions/setup-python@v5
-      with:
+    uses: ./.github/workflows/server.yml
+    with: 
         python-version: ${{ matrix.python-version }}
 
-    - run: |
-        sudo apt-get update
-        sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi-dev
-
-    - run: |
-        python -m pip install --upgrade pip wheel setuptools
-        python -m pip install -r dev-requirements.txt
-
   client:
-
-    strategy:
-      matrix:
-        node-version: ['14']
-
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: client
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: npm
-        cache-dependency-path: client/package-lock.json
-
-    - run: npm ci
-
-    - run: npm run build
+    uses: ./.github/workflows/client.yml
   
   docker:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - run: docker compose build
+    uses: ./.github/workflows/docker.yml
