--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -41,6 +41,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
+        cache: 'pip'
 
     - run: |
         sudo apt-get update
