--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,14 +2,16 @@ name: "Pytest"
 
 on:
   workflow_call:
+    inputs:
+      python-version:
+        description: "Python version"
+        required: false
+        default: "3.10"
+        type: string
 
 jobs:
 
   pytest:
-    strategy:
-      matrix:
-        python-version: ['3.10']
-
     runs-on: ubuntu-latest
 
     defaults:
@@ -39,7 +41,7 @@ jobs:
 
     - uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ inputs.python-version }}
         cache: pip
 
     - run: |
@@ -48,7 +50,7 @@ jobs:
 
     - run: |
         python -m pip install -U pip wheel setuptools
-        python -m pip install -r dev-requirements.txt
+        python -m pip install -Ur dev-requirements.txt
 
     - run: pytest
 
