--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,13 +6,13 @@
 #
 aiofiles==24.1.0
     # via quart
-aiohappyeyeballs==2.4.3
+aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.10.10
+aiohttp==3.11.9
     # via elasticsearch
 aiosignal==1.3.1
     # via aiohttp
-amqp==5.2.0
+amqp==5.3.1
     # via kombu
 annotated-types==0.7.0
     # via pydantic
@@ -22,7 +22,7 @@ arrow==1.3.0
     #   superdesk-core
 asgiref==3.8.1
     # via superdesk-core
-async-timeout==4.0.3
+async-timeout==5.0.1
     # via
     #   aiohttp
     #   redis
@@ -32,7 +32,7 @@ authlib==1.3.2
     # via superdesk-core
 babel==2.16.0
     # via quart-babel
-bcrypt==4.2.0
+bcrypt==4.2.1
     # via superdesk-core
 billiard==4.2.1
     # via celery
@@ -44,9 +44,9 @@ blinker==1.8.2
     #   quart
     #   raven
     #   superdesk-core
-boto3==1.35.57
+boto3==1.35.75
     # via superdesk-core
-botocore==1.35.57
+botocore==1.35.75
     # via
     #   boto3
     #   s3transfer
@@ -89,7 +89,7 @@ click-repl==0.3.0
     # via celery
 croniter==3.0.4
     # via superdesk-core
-cryptography==43.0.3
+cryptography==44.0.0
     # via
     #   authlib
     #   jwcrypto
@@ -198,7 +198,7 @@ markupsafe==3.0.2
     #   quart
     #   superdesk-core
     #   werkzeug
-motor==3.5.3
+motor==3.6.0
     # via superdesk-core
 multidict==6.1.0
     # via
@@ -218,8 +218,10 @@ priority==2.0.0
     # via hypercorn
 prompt-toolkit==3.0.48
     # via click-repl
-propcache==0.2.0
-    # via yarl
+propcache==0.2.1
+    # via
+    #   aiohttp
+    #   yarl
 pyasn1==0.6.1
     # via
     #   ldap3
@@ -230,15 +232,15 @@ pyasn1-modules==0.4.1
     # via oauth2client
 pycparser==2.22
     # via cffi
-pydantic==2.9.2
+pydantic==2.10.3
     # via superdesk-core
-pydantic-core==2.23.4
+pydantic-core==2.27.1
     # via pydantic
 pyjwt==2.8.0
     # via superdesk-core
 pymemcache==4.0.0
     # via superdesk-core
-pymongo==4.7.3
+pymongo==4.9.2
     # via
     #   eve
     #   motor
@@ -297,13 +299,13 @@ requests-oauthlib==2.0.0
     # via python-twitter
 rsa==4.9
     # via oauth2client
-s3transfer==0.10.3
+s3transfer==0.10.4
     # via boto3
 sgmllib3k==1.0.0
     # via feedparser
 simplejson==3.19.3
     # via eve
-six==1.16.0
+six==1.17.0
     # via
     #   flask-oidc-ex
     #   oauth2client
@@ -314,7 +316,7 @@ superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@asy
     # via -r requirements.in
 taskgroup==0.0.0a4
     # via hypercorn
-tomli==2.0.2
+tomli==2.2.1
     # via hypercorn
 types-python-dateutil==2.9.0.20241003
     # via arrow
@@ -357,11 +359,11 @@ werkzeug==3.1.3
     # via
     #   flask
     #   quart
-wrapt==1.16.0
+wrapt==1.17.0
     # via elastic-apm
 wsproto==1.2.0
     # via hypercorn
 xmlsec==1.3.14
     # via superdesk-core
-yarl==1.17.1
+yarl==1.18.3
     # via aiohttp
