--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,7 +8,7 @@ aiofiles==24.1.0
     # via quart
 aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.11.9
+aiohttp==3.11.10
     # via elasticsearch
 aiosignal==1.3.1
     # via aiohttp
@@ -42,11 +42,11 @@ blinker==1.8.2
     #   flask
     #   flask-mail
     #   quart
-    #   raven
+    #   sentry-sdk
     #   superdesk-core
-boto3==1.35.75
+boto3==1.35.76
     # via superdesk-core
-botocore==1.35.75
+botocore==1.35.76
     # via
     #   boto3
     #   s3transfer
@@ -63,6 +63,7 @@ certifi==2024.8.30
     #   elastic-apm
     #   elasticsearch
     #   requests
+    #   sentry-sdk
 cffi==1.17.1
     # via cryptography
 chardet==5.2.0
@@ -124,7 +125,6 @@ flask==3.0.3
     #   flask-mail
     #   flask-oidc-ex
     #   quart
-    #   raven
 flask-mail==0.10.0
     # via superdesk-core
 flask-oidc-ex==0.6.2
@@ -275,12 +275,11 @@ quart @ git+https://github.com/MarkLark86/quart@fix-test-client-with-utf8-url
     #   eve
     #   quart-babel
     #   quart-flask-patch
+    #   sentry-sdk
     #   superdesk-core
 quart-babel==1.0.7
     # via superdesk-core
 quart-flask-patch==0.3.0
-    # via superdesk-core
-raven[flask]==6.10.0
     # via superdesk-core
 redis==5.1.1
     # via
@@ -301,6 +300,8 @@ rsa==4.9
     # via oauth2client
 s3transfer==0.10.4
     # via boto3
+sentry-sdk[quart]==1.45.1
+    # via superdesk-core
 sgmllib3k==1.0.0
     # via feedparser
 simplejson==3.19.3
@@ -318,7 +319,7 @@ taskgroup==0.0.0a4
     # via hypercorn
 tomli==2.2.1
     # via hypercorn
-types-python-dateutil==2.9.0.20241003
+types-python-dateutil==2.9.0.20241206
     # via arrow
 types-pytz==2024.2.0.20241003
     # via quart-babel
@@ -345,6 +346,7 @@ urllib3==1.26.20
     #   elastic-apm
     #   elasticsearch
     #   requests
+    #   sentry-sdk
     #   superdesk-core
 vine==5.1.0
     # via
