--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -35,7 +35,11 @@ botocore==1.35.14
 cachetools==5.5.0
     # via flask-oidc-ex
 celery[redis]==5.4.0
-    # via superdesk-core
+    # via
+    #   celery-redbeat
+    #   superdesk-core
+celery-redbeat==2.2.0
+    # via -r requirements.in
 cerberus==1.3.5
     # via
     #   eve
@@ -206,6 +210,7 @@ python-dateutil==2.9.0.post0
     #   arrow
     #   botocore
     #   celery
+    #   celery-redbeat
     #   croniter
     #   icalendar
     #   superdesk-core
@@ -230,6 +235,7 @@ raven[flask]==6.10.0
 redis==5.0.8
     # via
     #   celery
+    #   celery-redbeat
     #   superdesk-core
 regex==2024.7.24
     # via superdesk-core
@@ -259,6 +265,8 @@ superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@develop
     # via -r requirements.in
 superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
     # via -r requirements.in
+tenacity==9.0.0
+    # via celery-redbeat
 types-python-dateutil==2.9.0.20240906
     # via arrow
 typing-extensions==4.12.2
