--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,9 +8,9 @@ aiofiles==24.1.0
     # via quart
 aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.11.10
+aiohttp==3.11.11
     # via elasticsearch
-aiosignal==1.3.1
+aiosignal==1.3.2
     # via aiohttp
 amqp==5.3.1
     # via kombu
@@ -26,9 +26,9 @@ async-timeout==5.0.1
     # via
     #   aiohttp
     #   redis
-attrs==24.2.0
+attrs==24.3.0
     # via aiohttp
-authlib==1.3.2
+authlib==1.4.0
     # via superdesk-core
 babel==2.16.0
     # via quart-babel
@@ -44,9 +44,9 @@ blinker==1.8.2
     #   quart
     #   sentry-sdk
     #   superdesk-core
-boto3==1.35.76
+boto3==1.35.94
     # via superdesk-core
-botocore==1.35.76
+botocore==1.35.94
     # via
     #   boto3
     #   s3transfer
@@ -54,11 +54,11 @@ cachetools==5.5.0
     # via flask-oidc-ex
 celery[redis]==5.4.0
     # via superdesk-core
-cerberus==1.3.5
+cerberus==1.3.7
     # via
     #   eve
     #   superdesk-core
-certifi==2024.8.30
+certifi==2024.12.14
     # via
     #   elastic-apm
     #   elasticsearch
@@ -70,11 +70,11 @@ chardet==5.2.0
     # via
     #   reportlab
     #   superdesk-core
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
     # via requests
-ciso8601==2.3.1
+ciso8601==2.3.2
     # via eve-elastic
-click==8.1.7
+click==8.1.8
     # via
     #   celery
     #   click-didyoumean
@@ -94,7 +94,7 @@ cryptography==44.0.0
     # via
     #   authlib
     #   jwcrypto
-deepdiff==8.0.1
+deepdiff==8.1.1
     # via superdesk-planning
 dnspython==2.7.0
     # via pymongo
@@ -112,8 +112,6 @@ eve @ git+https://github.com/MarkLark86/eve@use-quart
     # via superdesk-core
 eve-elastic @ git+https://github.com/MarkLark86/eve-elastic@use-quart
     # via superdesk-core
-events==0.3
-    # via eve
 exceptiongroup==1.2.2
     # via
     #   hypercorn
@@ -166,7 +164,7 @@ itsdangerous==2.2.0
     #   flask
     #   flask-oidc-ex
     #   quart
-jinja2==3.1.4
+jinja2==3.1.5
     # via
     #   flask
     #   quart
@@ -208,7 +206,7 @@ oauth2client==4.1.3
     # via flask-oidc-ex
 oauthlib==3.2.2
     # via requests-oauthlib
-orderly-set==5.2.2
+orderly-set==5.2.3
     # via deepdiff
 pillow==10.4.0
     # via
@@ -232,9 +230,9 @@ pyasn1-modules==0.4.1
     # via oauth2client
 pycparser==2.22
     # via cffi
-pydantic==2.10.3
+pydantic==2.10.4
     # via superdesk-core
-pydantic-core==2.27.1
+pydantic-core==2.27.2
     # via pydantic
 pyjwt==2.8.0
     # via superdesk-core
@@ -245,7 +243,7 @@ pymongo==4.9.2
     #   eve
     #   motor
     #   superdesk-core
-pyparsing==3.2.0
+pyparsing==3.2.1
     # via httplib2
 python-dateutil==2.9.0.post0
     # via
@@ -315,13 +313,13 @@ superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@async
     # via -r requirements.in
 superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@async
     # via -r requirements.in
-taskgroup==0.0.0a4
+taskgroup==0.2.2
     # via hypercorn
 tomli==2.2.1
     # via hypercorn
 types-python-dateutil==2.9.0.20241206
     # via arrow
-types-pytz==2024.2.0.20241003
+types-pytz==2024.2.0.20241221
     # via quart-babel
 typing-extensions==4.12.2
     # via
@@ -332,6 +330,7 @@ typing-extensions==4.12.2
     #   pydantic
     #   pydantic-core
     #   superdesk-core
+    #   taskgroup
 tzdata==2024.2
     # via
     #   celery
