--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.10', '3.12']
+        python-version: ['3.10', '3.12']
     uses: ./.github/workflows/server.yml
     with: 
         python-version: ${{ matrix.python-version }}
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.10', '3.12']
+        python-version: ['3.10', '3.12']
     uses: ./.github/workflows/pytest.yml
     with:
         python-version: ${{ matrix.python-version }}
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.10', '3.12']
+        python-version: ['3.10', '3.12']
     uses: ./.github/workflows/behave.yml
     with:
         python-version: ${{ matrix.python-version }}
