--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -93,7 +93,7 @@ elasticsearch==7.13.4
     #   superdesk-core
 eve==2.1.0
     # via superdesk-core
-eve-elastic==7.4.1
+eve-elastic==7.4.3
     # via superdesk-core
 events==0.3
     # via eve
@@ -270,9 +270,7 @@ tenacity==9.0.0
 types-python-dateutil==2.9.0.20240906
     # via arrow
 typing-extensions==4.12.2
-    # via
-    #   jwcrypto
-    #   superdesk-core
+    # via jwcrypto
 tzdata==2024.1
     # via celery
 tzlocal==2.1
