Turning Publisher on

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
     "license": "AGPL-3.0",
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#release/2.8",
-        "superdesk-planning": "github:superdesk/superdesk-planning#release/2.8"
+        "superdesk-planning": "github:superdesk/superdesk-planning#release/2.8",
+        "superdesk-publisher": "github:superdesk/superdesk-publisher#release/2.8"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./",
