--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,35 +4,35 @@
 #
 #    pip-compile requirements.in
 #
-amqp==5.2.0
+amqp==5.3.1
     # via kombu
 arrow==1.3.0
     # via
     #   eve-elastic
     #   superdesk-core
-async-timeout==4.0.3
+async-timeout==5.0.1
     # via redis
-authlib==0.14.3
+authlib==1.4.0
     # via superdesk-core
 babel==2.16.0
     # via flask-babel
-bcrypt==4.1.3
+bcrypt==4.2.1
     # via superdesk-core
-billiard==4.2.0
+billiard==4.2.1
     # via celery
-blinker==1.8.2
+blinker==1.9.0
     # via
     #   elastic-apm
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.35.14
+boto3==1.36.7
     # via superdesk-core
-botocore==1.35.14
+botocore==1.36.7
     # via
     #   boto3
     #   s3transfer
-cachetools==5.5.0
+cachetools==5.5.1
     # via flask-oidc-ex
 celery[redis]==5.4.0
     # via
@@ -40,11 +40,11 @@ celery[redis]==5.4.0
     #   superdesk-core
 celery-redbeat==2.2.0
     # via -r requirements.in
-cerberus==1.3.5
+cerberus==1.3.7
     # via
     #   eve
     #   superdesk-core
-certifi==2024.8.30
+certifi==2024.12.14
     # via
     #   elastic-apm
     #   elasticsearch
@@ -55,11 +55,11 @@ chardet==5.2.0
     # via
     #   reportlab
     #   superdesk-core
-charset-normalizer==3.3.2
+charset-normalizer==3.4.1
     # via requests
-ciso8601==2.3.1
+ciso8601==2.3.2
     # via eve-elastic
-click==8.1.7
+click==8.1.8
     # via
     #   celery
     #   click-didyoumean
@@ -73,13 +73,13 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.3.0
     # via celery
-croniter==3.0.3
+croniter==6.0.0
     # via superdesk-core
-cryptography==43.0.1
+cryptography==44.0.0
     # via
     #   authlib
     #   jwcrypto
-deepdiff==8.0.1
+deepdiff==8.1.1
     # via superdesk-planning
 draftjs-exporter[lxml]==2.1.0
     # via superdesk-core
@@ -87,11 +87,11 @@ ecs-logging==2.2.0
     # via elastic-apm
 elastic-apm[flask]==6.23.0
     # via superdesk-core
-elasticsearch==7.13.4
+elasticsearch==7.17.12
     # via
     #   eve-elastic
     #   superdesk-core
-eve==2.1.0
+eve==2.2.0
     # via superdesk-core
 eve-elastic==7.4.3
     # via superdesk-core
@@ -130,7 +130,7 @@ httplib2==0.22.0
     # via oauth2client
 icalendar==5.0.13
     # via superdesk-planning
-idna==3.8
+idna==3.10
     # via requests
 itsdangerous==1.1.0
     # via
@@ -150,19 +150,19 @@ jwcrypto==1.5.6
     # via
     #   flask-oidc-ex
     #   python-jwt
-kombu==5.3.7
+kombu==5.4.2
     # via
     #   celery
     #   superdesk-core
 ldap3==2.9.1
     # via superdesk-core
-lxml==5.2.2
+lxml==5.3.0
     # via
     #   draftjs-exporter
     #   lxml-html-clean
     #   superdesk-core
     #   xmlsec
-lxml-html-clean==0.4.0
+lxml-html-clean==0.4.1
     # via superdesk-core
 markupsafe==2.0.1
     # via
@@ -174,27 +174,27 @@ oauth2client==4.1.3
     # via flask-oidc-ex
 oauthlib==3.2.2
     # via requests-oauthlib
-orderly-set==5.2.2
+orderly-set==5.2.3
     # via deepdiff
-packaging==24.1
+packaging==24.2
     # via gunicorn
-pillow==10.4.0
+pillow==11.1.0
     # via
     #   reportlab
     #   superdesk-core
-prompt-toolkit==3.0.47
+prompt-toolkit==3.0.50
     # via click-repl
-pyasn1==0.6.0
+pyasn1==0.6.1
     # via
     #   ldap3
     #   oauth2client
     #   pyasn1-modules
     #   rsa
-pyasn1-modules==0.4.0
+pyasn1-modules==0.4.1
     # via oauth2client
 pycparser==2.22
     # via cffi
-pyjwt==2.8.0
+pyjwt==2.10.1
     # via superdesk-core
 pymemcache==4.0.0
     # via superdesk-core
@@ -203,7 +203,7 @@ pymongo==3.11.4
     #   eve
     #   mongolock
     #   superdesk-core
-pyparsing==3.1.4
+pyparsing==3.2.1
     # via httplib2
 python-dateutil==2.9.0.post0
     # via
@@ -220,7 +220,7 @@ python-magic==0.4.27
     # via superdesk-core
 python-twitter==3.5
     # via superdesk-core
-pytz==2024.1
+pytz==2024.2
     # via
     #   croniter
     #   eve-elastic
@@ -232,14 +232,14 @@ pyyaml==6.0.2
     # via superdesk-core
 raven[flask]==6.10.0
     # via superdesk-core
-redis==5.0.8
+redis==5.2.1
     # via
     #   celery
     #   celery-redbeat
     #   superdesk-core
-regex==2024.7.24
+regex==2024.11.6
     # via superdesk-core
-reportlab==4.2.2
+reportlab==4.2.5
     # via superdesk-core
 requests==2.32.3
     # via
@@ -250,13 +250,13 @@ requests-oauthlib==2.0.0
     # via python-twitter
 rsa==4.9
     # via oauth2client
-s3transfer==0.10.2
+s3transfer==0.11.2
     # via boto3
 sgmllib3k==1.0.0
     # via feedparser
 simplejson==3.19.3
     # via eve
-six==1.16.0
+six==1.17.0
     # via
     #   flask-oidc-ex
     #   oauth2client
@@ -267,12 +267,14 @@ superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@dev
     # via -r requirements.in
 tenacity==9.0.0
     # via celery-redbeat
-types-python-dateutil==2.9.0.20240906
+types-python-dateutil==2.9.0.20241206
     # via arrow
 typing-extensions==4.12.2
     # via jwcrypto
-tzdata==2024.1
-    # via celery
+tzdata==2025.1
+    # via
+    #   celery
+    #   kombu
 tzlocal==2.1
     # via superdesk-core
 unidecode==1.3.8
@@ -291,13 +293,13 @@ vine==5.1.0
     #   kombu
 wcwidth==0.2.13
     # via prompt-toolkit
-websockets==10.3
+websockets==13.1
     # via superdesk-core
 werkzeug==1.0.1
     # via
     #   flask
     #   superdesk-core
-wrapt==1.16.0
+wrapt==1.17.2
     # via elastic-apm
 xmlsec==1.3.14
     # via superdesk-core
