--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.2"
 services:
 
   mongodb:
@@ -58,7 +57,7 @@ services:
       - superdesk
 
   superdesk-client:
-    build: sourcefabricoss/superdesk-client:latest
+    image: sourcefabricoss/superdesk-client:latest
     environment:
       # If not hosting on localhost, change these lines
       - SUPERDESK_URL=http://localhost:8080/api
