use release/2.9 branches where available

--- a/server/requirements.in
+++ b/server/requirements.in
@@ -2,5 +2,5 @@ honcho
 gunicorn
 celery-redbeat
 
-git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
-git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-core.git@release/2.9#egg=superdesk-core
+git+https://github.com/superdesk/superdesk-planning.git@release/2.9#egg=superdesk-planning
