--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,9 +12,9 @@ arrow==1.3.0
     #   superdesk-core
 async-timeout==5.0.1
     # via redis
-authlib==1.4.0
+authlib==1.4.1
     # via superdesk-core
-babel==2.16.0
+babel==2.17.0
     # via flask-babel
 bcrypt==4.2.1
     # via superdesk-core
@@ -26,9 +26,9 @@ blinker==1.9.0
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.36.7
+boto3==1.36.16
     # via superdesk-core
-botocore==1.36.7
+botocore==1.36.16
     # via
     #   boto3
     #   s3transfer
@@ -44,7 +44,7 @@ cerberus==1.3.7
     # via
     #   eve
     #   superdesk-core
-certifi==2024.12.14
+certifi==2025.1.31
     # via
     #   elastic-apm
     #   elasticsearch
@@ -79,7 +79,7 @@ cryptography==44.0.0
     # via
     #   authlib
     #   jwcrypto
-deepdiff==8.1.1
+deepdiff==8.2.0
     # via superdesk-planning
 draftjs-exporter[lxml]==2.1.0
     # via superdesk-core
@@ -156,7 +156,7 @@ kombu==5.4.2
     #   superdesk-core
 ldap3==2.9.1
     # via superdesk-core
-lxml==5.3.0
+lxml==5.3.1
     # via
     #   draftjs-exporter
     #   lxml-html-clean
@@ -174,7 +174,7 @@ oauth2client==4.1.3
     # via flask-oidc-ex
 oauthlib==3.2.2
     # via requests-oauthlib
-orderly-set==5.2.3
+orderly-set==5.3.0
     # via deepdiff
 packaging==24.2
     # via gunicorn
@@ -220,7 +220,7 @@ python-magic==0.4.27
     # via superdesk-core
 python-twitter==3.5
     # via superdesk-core
-pytz==2024.2
+pytz==2025.1
     # via
     #   croniter
     #   eve-elastic
@@ -261,9 +261,9 @@ six==1.17.0
     #   flask-oidc-ex
     #   oauth2client
     #   python-dateutil
-superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@develop
+superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@release/2.9
     # via -r requirements.in
-superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
+superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@release/2.9
     # via -r requirements.in
 tenacity==9.0.0
     # via celery-redbeat
